@@ -1,0 +1,1 @@
+DIST stiff-2.4.0.tar.gz 1074161 SHA256 f4e85146c17fe8dcf160d12dc6df08bbd9212bb8444162b2e6ebf03f7513a992 SHA512 c8a293a2d1771b21d8af1194f9a2f582eca1a363964e76b78319c9cc2407332ef5e31dc74c0d10b9d5c7b6ae18ebd35ee59c53ad31c5f3966fabcd03948cadf6 WHIRLPOOL aa3b0d4ee6e2fc7d1fd90d19c815985ddb520c3fe37da6ec7c631675f5277b1d75b72a776a64631beedc57b934899c86eebbdc0b7c54925eb153cff65146e805
