@@ -2,6 +2,12 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/sci-astronomy/stiff/ChangeLog,v 1.7 2011/08/04 18:33:30 bicatali Exp $
 
+*stiff-2.4.0 (21 Mar 2014)
+
+  21 Mar 2014; Sébastien Fabbro <bicatali@gentoo.org> +stiff-2.4.0.ebuild,
+  stiff-9999.ebuild:
+  sci-astronomy/stiff: Add new version linked to live one
+
   27 Feb 2014; Sébastien Fabbro <bicatali@gentoo.org> metadata.xml,
   stiff-9999.ebuild:
   sci-astronomy/stiff: EAPI-5, autotools-utils
